# profit-cli

./: Cargo.toml
src/: app.rs  config.rs  main.rs  ui.rs
src/psp/: adyen.rs  mock.rs  mod.rs  mollie.rs
