[package]
name = "profit-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
